Fixed spacing issue for Header links on small screens

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -30,3 +30,9 @@ h2 {
   max-width: 70%;
   margin: 0 auto;
 }
+
+@media only screen and (max-width: 500px) {
+  .linkContainer {
+    flex-direction: column;
+  }
+}
